--- a/index.css
+++ b/index.css
@@ -17,4 +17,82 @@ body {
 * {
   margin-block-start: 0;
   margin-block-end: 0;
+  margin: 0px;
+  padding: 0px;
+}
+
+.form-wrapper {
+  max-width: 1440px;
+  width: 100%;
+  margin: 80px auto;
+}
+
+.form-container {
+  position: relative;
+  padding: 0 15px;
+  max-width: 100%;
+}
+
+@media screen and (min-width: 990px) {
+  .form-container {
+    padding: 0 80px;
+  }
+}
+
+/* FLOATING LABEL */
+
+.floating-label-container {
+  position: relative;
+  margin: 20px 0;
+  width: 300px;
+}
+
+.floating-input {
+  padding: 6px 20px;
+  width: calc(100% - 20px);
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+  background-color: rgb(32, 32, 32);
+  color: #d9d9d9;
+}
+
+.floating-label {
+  position: absolute;
+  top: 5px;
+  left: 20px;
+  padding: 0 5px;
+  font-size: 14px;
+  color: #999;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.floating-input:focus ~ .floating-label,
+.floating-input:not(:placeholder-shown) ~ .floating-label {
+  top: -10px;
+  left: 20px;
+  font-size: 12px;
+  color: #d9d9d9;
+  background-color: rgb(32, 32, 32);
+}
+
+@media screen and (min-width: 990px) {
+  .floating-input:focus ~ .floating-label,
+  .floating-input:not(:placeholder-shown) ~ .floating-label {
+    top: -10px;
+    left: 90px;
+    font-size: 12px;
+    color: #d9d9d9;
+    background-color: rgb(32, 32, 32);
+  }
+  .floating-label {
+    left: 90px;
+  }
 }
