--- a/index.css
+++ b/index.css
@@ -12,6 +12,10 @@ body {
   background-color: rgb(32, 32, 32);
   color: #d9d9d9;
   font-family: Poppins;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 * {
@@ -21,78 +25,90 @@ body {
   padding: 0px;
 }
 
-.form-wrapper {
-  max-width: 1440px;
+.wrapper {
   width: 100%;
-  margin: 80px auto;
+  max-width: 1440px;
+  padding: 0 15px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Poppins Heading;
 }
 
 .form-container {
-  position: relative;
-  padding: 0 15px;
-  max-width: 100%;
+  margin: 30px 0;
 }
 
-@media screen and (min-width: 990px) {
-  .form-container {
-    padding: 0 80px;
-  }
-}
-
-/* FLOATING LABEL */
-
-.floating-label-container {
-  position: relative;
-  margin: 20px 0;
-  width: 300px;
-}
-
-.floating-input {
-  padding: 6px 20px;
-  width: calc(100% - 20px);
-  padding: 6px 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+#cardInput {
+  font-size: 24px;
+  padding: 6px 12px;
+  border-radius: 15px;
   outline: none;
-  transition: border-color 0.3s;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
-  transition: border-color 0.3s;
+  border: 1px solid #d9d9d9;
   background-color: rgb(32, 32, 32);
   color: #d9d9d9;
+}
+
+.image-container {
+  position: absolute;
+  right: 12px;
+  top: 8px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cardTypeImage {
+  width: 100%;
+  position: relative;
+}
+
+#cardInput,
+#cardType,
+#cardValidity {
+  margin-bottom: 1rem;
+}
+
+#cardInput.valid {
+  border-color: lime;
+}
+#cardInput.invalid {
+  border-color: red;
+}
+
+.input-container {
+  width: max-content;
+  position: relative;
 }
 
 .floating-label {
   position: absolute;
-  top: 5px;
-  left: 20px;
-  padding: 0 5px;
-  font-size: 14px;
-  color: #999;
   pointer-events: none;
   transition: all 0.3s ease;
+  height: max-content;
+  top: 8px;
+  left: 12px;
+  color: #999;
+  font-size: 16px;
 }
 
 .floating-input:focus ~ .floating-label,
 .floating-input:not(:placeholder-shown) ~ .floating-label {
-  top: -10px;
-  left: 20px;
-  font-size: 12px;
-  color: #d9d9d9;
+  top: -8px;
   background-color: rgb(32, 32, 32);
+  font-size: 12px;
+  padding: 0 4px;
+  color: #d9d9d9;
 }
 
 @media screen and (min-width: 990px) {
-  .floating-input:focus ~ .floating-label,
-  .floating-input:not(:placeholder-shown) ~ .floating-label {
-    top: -10px;
-    left: 90px;
-    font-size: 12px;
-    color: #d9d9d9;
-    background-color: rgb(32, 32, 32);
-  }
-  .floating-label {
-    left: 90px;
+  .wrapper {
+    padding: 0 80px;
   }
 }
